--- a/src/common/containers/form/forms/personal-info/personal-info-form.component.html
+++ b/src/common/containers/form/forms/personal-info/personal-info-form.component.html
@@ -122,7 +122,7 @@
         [error]="formError.ico || form.controls.ico.errors"
         [formControl]="form.controls.ico"
         [id]="'ico'"
-        label="IČ"
+        label="IČO"
         [success]="form.controls.ico.valid && (form.controls.ico.touched || formError.ico)"
         [touched]="form.controls.ico.touched || formError.ico"
         [validationMessages]="formFields.validationMessages.ico"
