--- a/src/app/pages/consumers/profile/profile.component.html
+++ b/src/app/pages/consumers/profile/profile.component.html
@@ -39,6 +39,7 @@
         <div class="col-12 col-md-8 col-xl-7 col-lg-5">
             <div class="page-box">
                 <pxe-user-notification-form
+                    [isNotificationsAllowed]="isNotificationsAllowed"
                     [formFields]="userNotificationFormFields"
                     [formLoading]="formLoading"
                     [formSent]="formNotificationSent"
