PXEPR-1440-fix checkbox valid disabled state edit

--- a/src/common/ui/forms/field/field.component.scss
+++ b/src/common/ui/forms/field/field.component.scss
@@ -545,7 +545,7 @@ textarea.form-control--not-empty {
 		}
 	}
 
-	&.is-valid + .custom-control-label {
+	&.is-valid:not([disabled]) + .custom-control-label {
 		color: $font-text;
 
 		&:hover {
