PXEPR-1463 oveflow hidden add to class section

--- a/src/assets/scss/05_pages/public-pages.scss
+++ b/src/assets/scss/05_pages/public-pages.scss
@@ -16,6 +16,7 @@
 
 .section {
 	position: relative;
+	overflow: hidden;
 
 	&:first-child {
 		padding-top: ( $header-height + ( $spacer * .75 ) );
