--- a/src/common/containers/form/forms/user-notification/user-notification-form.component.html
+++ b/src/common/containers/form/forms/user-notification/user-notification-form.component.html
@@ -24,7 +24,7 @@
         <div class="col">
             <lnd-alert type="info"
                        hasIcon="true">
-                Notifikace byly úspěšně uloženy {{(isNotificationsAllowed ? 'zapnuty' : 'vypnuty')}}.
+                Notifikace byly úspěšně {{(isNotificationsAllowed ? 'zapnuty' : 'vypnuty')}}.
             </lnd-alert>
         </div>
     </div>
