--- a/src/common/ui/supply-point-offer/supply-point-offer.component.scss
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.scss
@@ -20,17 +20,10 @@
 		color: inherit;
 		border-radius: $border-radius;
 		box-shadow: 0 2px 5px rgba($box-shadow-color, .16);
-		pointer-events: none;
 
 		// Media queries
 		@include media-breakpoint-up(xl) {
 			padding: ( $spacer * 2.5 );
-		}
-	}
-
-	&:not(.supply-point-offer--owner) {
-		@include link-without-href-self {
-			pointer-events: auto;
 		}
 	}
 
@@ -48,9 +41,8 @@
 
 	&.supply-point-offer--owner {
 		@include link-without-href-self {
-			background-color: transparent;
+			background-color: rgba($body-bg, .5);
 			text-align: center;
-			box-shadow: none;
 
 			// Media queries
 			@include media-breakpoint-up(md) {
