--- a/src/app/pages/consumers/request/offer-selection/offer-selection.component.html
+++ b/src/app/pages/consumers/request/offer-selection/offer-selection.component.html
@@ -44,28 +44,20 @@
     <div class="row"
         *ngIf="supplyPointOffers && questions">
         <div class="col-12 col-xl-10 offset-xl-1">
-            <div class="row align-items-center mb-3">
+            <div class="row justify-content-md-between mb-md-3 text-center text-md-left">
                 <div *ngIf="supplyPointOffers && supplyPointOffers.length"
-                     class="col-12 mb-5 col-md-3 mb-md-0 text-center text-md-left">
+                     class="col-12 mb-5 col-md-auto mb-md-0">
                     <lnd-button
                         label="Krok zpět"
                         type="secondary"
                         (action)="navigateRequestService.backStepAction(supplyPoint, PREVIOUS_PROGRESS_STATUS)">
                     </lnd-button>
                 </div>
-                <div class="col-12 text-center"
-                     [class.col-md-6]="supplyPointOffers && supplyPointOffers.length">
-                    <h2 class="mb-0">
-                        <ng-container *ngIf="supplyPointOffers && supplyPointOffers.length; else noOfferTextTemplate">
-                            Vyberte si nabídku
-                        </ng-container>
-                    </h2>
-                </div>
                 <div *ngIf="existsCurrentOffer"
-                     class="col-12 mb-5 col-md-3 mb-md-0 text-center text-md-right">
+                     class="col-12 mb-5 col-md-auto mb-md-0">
                     <lnd-button
                         label="Zobrazit současnou smlouvu"
-                        type="white"
+                        type="dark"
                         (action)="scrollToCurrentOffer()">
                     </lnd-button>
                 </div>
