PXEPR-966-compare-offer two if add

--- a/src/common/ui/supply-point-offer/supply-point-offer.component.html
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.html
@@ -89,7 +89,9 @@
             </div>
             <div
                 *ngIf="!showPriceDecomposition && !isOwner"
-                class="row justify-content-between">
+                class="row"
+                [class.justify-content-between]="supplyPointOffer.benefits && supplyPointOffer.benefits.length"
+                [class.justify-content-end]="!(supplyPointOffer.benefits && supplyPointOffer.benefits.length)">
                 <div
                     *ngIf="supplyPointOffer.benefits && supplyPointOffer.benefits.length"
                     class="col">
