PXEPR-966-compare-offer minor fix

--- a/src/common/ui/supply-point-offer/supply-point-offer.component.html
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.html
@@ -37,6 +37,7 @@
             [class.pb-3]="!isOwner"
             [class.col-md-6]="isOwner"
             [class.order-md-3]="!isOwner"
+            [class.order-md-2]="isOwner"
             [class.pt-md-4]="!isOwner"
             [class.pb-md-0]="!isOwner">
             <div class="row">
