--- a/src/common/ui/forms/field/field.component.scss
+++ b/src/common/ui/forms/field/field.component.scss
@@ -25,6 +25,13 @@
 			max-width: $input-width-large;
 		}
 	}
+
+	&--big {
+		&,
+		.form-control-case {
+			max-width: $input-width-big;
+		}
+	}
 }
 
 .form-control-info-wrapper {
