--- a/src/app/pages/suppliers/supplier-profile/supplier-profile.component.html
+++ b/src/app/pages/suppliers/supplier-profile/supplier-profile.component.html
@@ -33,14 +33,7 @@
     <div class="row justify-content-center">
         <div class="col-12 col-md-8 col-xl-7 col-lg-5">
             <div class="page-box">
-                <pxe-supplier-profile-form
-                    [formValues]="supplierInfo"
-                    [formFields]="supplierProfileFormFields"
-                    [formLoading]="formLoading"
-                    [globalError]="globalError"
-                    [fieldError]="fieldError"
-                    (submitAction)="saveSupplierProfile($event)"
-                ></pxe-supplier-profile-form>
+                <pxe-supplier-profile-form></pxe-supplier-profile-form>
             </div>
         </div>
     </div>
