--- a/src/common/containers/form/forms/supplier-profile/supplier-profile-form.component.html
+++ b/src/common/containers/form/forms/supplier-profile/supplier-profile-form.component.html
@@ -43,7 +43,7 @@
                     class="tooltip-supplier-profile-numbers">
                     Údaje z číselné řady se propisují do uzavřených smluv. <br>
                     Např. EL001CK (EL - prefix, 001 - proměnná, CK - sufix). <br>
-                    K proměnní se vždy bude přičítat +1 musí tedy být číselného formátu.
+                    K proměnné se vždy bude přičítat +1 musí tedy být číselného formátu.
                 </lnd-tooltip>
             </div>
             <div class="col-12 col-md-4 pr-md-2">
