PXEPR-1034-supplier-profile fix tooltip content width

--- a/src/common/ui/supply-point-offer/supply-point-offer.component.html
+++ b/src/common/ui/supply-point-offer/supply-point-offer.component.html
@@ -52,7 +52,8 @@
                                 [wrapperElement]="supplyPointOfferWrapper"
                                 direction="bottom"
                                 class="tooltip-supply-point-info-holder"
-                                customClass="ml-2 tooltip-supply-point-info">
+                                customClass="ml-2 tooltip-supply-point-info"
+                                customContentClass="tooltip__content--fixed-width">
                                 <div>{{question?.shortContent}}</div>
                                 <a [routerLink]="question.absoluteUrl"
                                 class="link--white link--interactive-revert d-block mt-1">
