PXEPR-1437 dots addded

--- a/src/app/pages/consumers/request/payment/payment.component.html
+++ b/src/app/pages/consumers/request/payment/payment.component.html
@@ -135,7 +135,7 @@
                                     Bankovní identita
                                 </h3>
                                 <p class="mb-3">
-                                    Použijte stejný a bezpečný způsob přihlášení jako do vašeho internetového bankovnictví
+                                    Použijte stejný a bezpečný způsob přihlášení jako do vašeho internetového bankovnictví.
                                 </p>
                                 <ol class="check-list">
                                     <li class="pb-1">Služba je zaštítěna Českou národní bankou</li>
