feature/PXEPR-1476-fix-sms-sent

--- a/src/common/containers/form/forms/verification/verification-form.component.html
+++ b/src/common/containers/form/forms/verification/verification-form.component.html
@@ -40,7 +40,7 @@
             </lnd-button>
             <p class="small"
                [class.is-disabled]="smsSent">
-                Ověřovací SMS kód odešlem na číslo {{phone | phone}}
+                Ověřovací SMS kód odešleme na číslo {{phone | phone}}
             </p>
         </div>
         <div class="col-12">
