--- a/src/assets/scss/01_base/_variables.scss
+++ b/src/assets/scss/01_base/_variables.scss
@@ -344,6 +344,7 @@ $drop-zone-border-gap-width:   15px;
 $carousel-compare-price:       $secondary;
 $carousel-compare-border-left: 1px solid rgba(151, 151, 151, .3);
 
+
 // Accordion
 $accordion-active-shadow:      0 10px 30px 0 rgba($body-color, .2);
 $accordion-toggle-icon-size:   20px;
@@ -353,7 +354,12 @@ $accordion-padding-right-xs:   ( $spacer + $accordion-toggle-icon-size + $spacer
 $accordion-padding-right:      ( $accordion-padding + $accordion-toggle-icon-size + $accordion-padding );
 
 
-// Accordion
+// Loader
 $loader-color:                 #2b4762;
 $loader-size:                  20px;
 
+
+// Forms - input width (for form-container)
+$input-width:                        300px;
+$input-width-large:                  320px;
+$input-width-big:                    500px;
