--- a/src/common/containers/history/detail-container/detail-container.component.html
+++ b/src/common/containers/history/detail-container/detail-container.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="globalError$ | async as globalError">
     <div class="row">
         <div *ngIf="globalError?.length !== 0"
-             class="col-12">
+             class="col-12 col-xl-10 offset-xl-1">
             <lnd-alert
                 type="danger">
                 <ng-container *ngFor="let error of globalError">
@@ -16,14 +16,14 @@
 </ng-container>
 <ng-template #dataTemplate>
     <div *ngIf="supplyPoint$ | async as supplyPoint" class="row">
-        <div class="col-12 col-xl-10 mb-5 col-md-3 mb-md-0 text-center text-md-left">
+        <div class="col-12 mb-5 text-center text-md-left mb-md-3 col-xl-10 offset-xl-1">
             <lnd-button
                 label="Krok zpět"
                 type="secondary"
                 (action)="backStep()">
             </lnd-button>
         </div>
-        <div class="col-12 col-xl-10">
+        <div class="col-12">
             <pxe-supply-point-detail-form
                 [supplyPoint]="supplyPoint"
                 [isForm]="false"
