PXEPR-437 icon add

--- a/src/assets/scss/01_base/_icons.scss
+++ b/src/assets/scss/01_base/_icons.scss
@@ -102,7 +102,8 @@ $icons: (
 	document-warning:      \e932,
 	document-down:         \e933,
 	document-success:      \e934,
-	arrow-down:            \e935
+	arrow-down:            \e935,
+	clock:                 \e936
 );
 
 // Icons aplication to class
