--- a/src/app/pages/consumers/supply-points/supply-points.component.html
+++ b/src/app/pages/consumers/supply-points/supply-points.component.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <p>
-                        V případě zájmu o dodávku energií pro nové odběrné místo, pokračujte prosím zadáním odběrného místa<ng-container *ngIf="supplyPointStatistic.notConcludedCount">.</ng-container>
+                        V případě zájmu o dodávku energií pro nové odběrné místo, pokračujte prosím zadáním odběrného místa<ng-container *ngIf="supplyPointStatistic.notConcludedCount"></ng-container>
                         <ng-container *ngIf="supplyPointStatistic.notConcludedCount">
                             Pokud už máte vytvořené odběrné místo, můžete se vrátit k vaší rozpracované smlouvě a dokončit proces
                         </ng-container>
