removing bodka from end of line

--- a/src/common/containers/history/overview-container/overview-container.component.html
+++ b/src/common/containers/history/overview-container/overview-container.component.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <p>
-                        V případě zájmu o dodávku energií pro nové odběrné místo, pokračujte prosím zadáním odběrného místa.
+                        V případě zájmu o dodávku energií pro nové odběrné místo, pokračujte prosím zadáním odběrného místa
                     </p>
                 </div>
             </div>
