--- a/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
+++ b/src/common/containers/form/forms/supply-point/detail/supply-point-detail-form.component.html
@@ -8,7 +8,7 @@
                     [data]="{
                             text: 'Platnost smlouvy končí za ' + contractEndInDays + ' ' + (contractEndInDays | plural: 'day')
                         }"
-                    (customBannerAction)="findNewSupplier(supplyPoint)"
+                    (customBannerAction)="findNewSupplier()"
                 ></lnd-banner-ui>
             </div>
         </div>
